2014-04-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (null_dashtype):  Ignore custom dashtypes. Pass through
	dashtypes > 0 to term->linetype(). Treat negative dashtypes as LT_BLACK.
	This should allow terminals without a private dashtype implementation to
	continue working as they did before (pre-version 5).

	* src/plot2d.c (eval_plots):  Don't call lp_parse if all we want is
	a fill color.

	* src/boundary.c (do_key_sample) src/graphics.c (plot_boxes plot_c_bars):
	Funnel requests for linetype changes through term_apply_lp_properties().

	* demo/all.dem:  Add varcolor.dem to the test set.

2014-04-06  Christoph Bersch <usenet@bersch.net>

	* src/graphics.c (fill_between):  It is no longer necessary to clip in
	this routine because the component quadrilaterals will be clipped later.

2014-04-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_table): Name leak.

2014-04-05  Bastian Maerkisch  <bmaerkisch@web.de>

	* demo/vector.dem docs/gnuplot.doc src/command.c src/datablock.c
	src/datablock.h src/gadgets.c src/gadgets.h src/plot2d.c src/set.c
	src/tabulate.c src/tabulate.h src/unset.c src/util.c src/util.h:
	'set table $datablock' redirects table output to a named data block.
	Patch #662

2014-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (load_linetype):  If a line style is based on a lt < 0
	(LT_NODRAW, LT_BACKGROUND, LT_BLACK, etc), take only the line color.
	FIXME: LT_AXIS should also take the dash pattern but that mechanism
	isn't fully in place yet.
	Bug #1369

	* src/util.c (value_to_str):  Fix error in buffer length accounting.
	Bug #1372

	* src/alloc.c src/alloc.h src/bf_test.c: The conditional code in
	alloc.c for tracking memory allocation/free has bit-rotted to a point
	where the program segfaults on entry if it is enabled.  Since this sort
	of accounting is now better done using valgrind it is not worth fixing
	the old code.  Delete it.
